# understudy

./: .coverage  .env.example  .gitignore  .mcp.json  .npmrc.example  CLAUDE.md  Makefile  README.md  architecture.md  chainguard-setup.md  devpost.md  docker-compose.yml  package-lock.json  package.json  pip.conf.example  pyproject.toml  run.sh
.claude/: settings.json
.claude/agents/: cosmo-sdl-reviewer.md  demo-mode-auditor.md  gemini-pipeline-tracer.md  supply-chain-reviewer.md
.claude/skills/demo-prewarm/: SKILL.md
.claude/skills/env-audit/: SKILL.md
.claude/skills/gemini-prompt-test/: SKILL.md
.claude/skills/verify-supply-chain/: SKILL.md
.github/workflows/: release.yml
apps/: __init__.py
apps/agent-template/: .npmrc.example  README.md  __init__.py  index.ts  main.py  package.json  tsconfig.json  vitest.config.ts
apps/agent-template/src/: index.ts  manifest.ts
apps/agent-template/tests/: core-loop.test.ts  graphql-resolvers.test.ts  insforge.test.ts  manifest.test.ts  preboot.test.ts  tinyfish.test.ts
apps/api/: README.md  __init__.py  adapters.py  adapters_mock.py  agent_runs.py  main.py  redis_client.py  schemas.py  store.py
apps/cosmo-mcp-driver/: README.md  __init__.py  __main__.py  cli.py  clients.py  driver.py  main.py  naming.py  protocol.py  redis_store.py
apps/cosmo-mcp-driver/tests/: __init__.py  mock_stdio_server.py  test_driver.py
apps/cosmo-router/: README.md  __init__.py  compose.yaml  compose_supergraph.sh  config.yaml  main.py  studio_embed.html  supergraph.json
apps/cosmo-router/scripts/: offline_compose.py
apps/cosmo-router/subgraphs/: agent_alpha.graphql  agent_beta.graphql
apps/synthesis-worker/: README.md  __init__.py  cosmo_writer.py  gemini_client.py  insforge_writer.py  keyframes.py  langcache.py  main.py  pipeline.py  prompts.py  trusted_documents.py
apps/web/: .npmrc.example  .stitch-project-id  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/docs/: design-system.md
apps/web/src/: App.tsx  main.tsx  theme.css  vite-env.d.ts
docs/: chainguard-libraries.md  conformance-report.md  demo-runbook.md  deployment.md  devils-advocate.md  insforge-migrations.md  known-issues.md
docs/gemini-prompts/: action_detection_flash_lite.md  intent_abstraction_pro.md  script_emission_flash.md
docs/plans/: 2026-04-25-cosmo-connect-protocols.md
fixtures/cosmo/: orders-query.json  products-mutation.json
fixtures/synthesis/: README.md
fixtures/synthesis/dom/: diffs.json  page_titles.json  snapshots.json
infra/chainguard/: Dockerfile.agent.tmpl  Dockerfile.wolfi  README.md  slsa-config.yaml
infra/fly/: README.md  agent.fly.toml.tmpl  fly-start.sh  fly.toml  macmini-start.sh  macmini.plist
infra/github-actions/: README.md  ci.yml  release.yml
infra/insforge-pool/: README.md  provision.sh  schema.sql  warm-pool.yaml
migrations/: 20260424214016_initial-schema.sql  20260424220227_rls-policies.sql
scripts/: chainguard_init.sh  demo_mode_switch.sh  dev-debug.sh  insforge_oauth_login.py  prewarm_demo.py  record_sample.sh  register_agent_subgraph.sh  run_tinyfish_agent.mjs  setup_chainguard_libraries.sh  tail-traces.sh  verify_release.sh
tests/: conftest.py  test_agent_fly_template.py  test_ams_namespace.py  test_api_endpoints.py  test_cosmo_to_router.py  test_e2e_smoke.py  test_insforge_schema.py  test_insforge_store_replay.py  test_int8_quantization.py  test_keyframes_stress.py  test_langcache.py  test_memory_client.py  test_prewarm_demo.py  test_release_workflow.py  test_supply_chain.py  test_upload_worker_handshake.py
tests/synthesis_worker/: conftest.py  test_cosmo_writer.py  test_fixture_e2e.py  test_insforge_writer_replay.py  test_keyframes.py  test_pipeline_contract.py  test_replay_mode.py  test_trusted_documents.py
understudy/: __init__.py  bin.py  models.py
understudy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
understudy/memory/: __init__.py  ams.py  cli.py  client.py  extract.py  langcache.py  schema.py  vector.py
(+101 files in other folders)
