[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "understudy"
version = "0.1.0"
description = "Meta-agentic platform: 60s recording to signed deployed web agent with GraphQL + memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Understudy Team" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "google-genai>=1.0",
    "redis>=5.2",
    "redisvl>=0.4",
    "opencv-python>=4.10",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28",
    "strawberry-graphql>=0.250",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

# Console scripts work around the hyphenated `apps/synthesis-worker/` and
# `apps/cosmo-mcp-driver/` directories — see understudy/bin.py for rationale.
[project.scripts]
understudy-synthesis-worker = "understudy.bin:synthesis_worker_main"
understudy-cosmo-driver = "understudy.bin:cosmo_driver_main"

[tool.setuptools.packages.find]
include = ["understudy*"]
exclude = ["apps*", "infra*", "scripts*", "docs*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "apps"]
# importlib mode avoids module-name collisions between tests/ and apps/*/tests/
# (both have test modules that would otherwise resolve to `tests.<name>`).
addopts = "--import-mode=importlib"
